--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title> About — Just who the hell you think I am? &raquo;  iZheteng</title>
+<title> About — cuiqingwei.github.io &raquo;  iZheteng</title>
 <meta name="description" content="活着，就要去折腾！
 ">
 
@@ -38,7 +38,7 @@
 <link rel="stylesheet" href="/assets/vendor/normalize-css/normalize.css">
 <link rel="stylesheet" href="/css/main.css">
 
-  <link rel="stylesheet" href="/assets/vendor/highlight/styles/solarized_dark.css">
+  <link rel="stylesheet" href="/assets/vendor/highlight/styles/agate.css">
 
 <link rel="stylesheet" href="/assets/vendor/font-awesome/css/font-awesome.css">
     </head>
@@ -73,14 +73,20 @@
 
             <h1 class="page-title">
     <div class="page-title__text">About</div>
-    <div class="page-title__subtitle">Just who the hell you think I am?</div>
+    <div class="page-title__subtitle">cuiqingwei.github.io</div>
 </h1>
 
-<p>This is the base Jekyll theme. You can find out more info about customizing your Jekyll theme, as well as basic Jekyll usage documentation at <a href="http://jekyllrb.com/">jekyllrb.com</a></p>
+<p>记录之，告诫自己；分享之，愿助他人。</p>
 
-<p>You can find the source code for the Jekyll new theme at: <a href="https://github.com/jglovier/jekyll-new">github.com/jglovier/jekyll-new</a></p>
+<p>学习一定要，知之为知之，不知为不知，不仅自己不能装逼，也不能向装逼的人讨教，否则只是相互浪费时间而已。</p>
 
-<p>You can find the source code for Jekyll at <a href="https://github.com/jekyll/jekyll">github.com/jekyll/jekyll</a></p>
+<p>不要和不懂规则且贪婪的人合作，否则他们会反过来诬陷和要挟你。</p>
+
+<p>和学生合作一定要谨慎，他们往往会高估自己的能力。</p>
+
+<p>商业项目，一定要先签合同再做事。</p>
+
+<p>不要用不成熟的技术做开发。</p>
 
 
 <div class="explore">
