--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title> Blog — enjoy your work, enjoy you life! &raquo;  iZheteng</title>
+<title> Blog — enjoy your work, enjoy your life! &raquo;  iZheteng</title>
 <meta name="description" content="活着，就要去折腾！
 ">
 
@@ -73,7 +73,7 @@
 
             <h1 class="page-title">
     <div class="page-title__text">Blog</div>
-    <div class="page-title__subtitle">enjoy your work, enjoy you life!</div>
+    <div class="page-title__subtitle">enjoy your work, enjoy your life!</div>
 </h1>
 
 <ul class="list-posts">
