--- a/404.html
+++ b/404.html
@@ -8,6 +8,6 @@
 <title>公益404页面 // CQW的博客</title>
 </head>
 <body>
-<script type="text/javascript" src="http://www.qq.com/404/search_children.js" charset="utf-8" homepageurl="http://xiaming.com.cn" homepagename="夏明的博客"></script>
+<script type="text/javascript" src="http://www.qq.com/404/search_children.js" charset="utf-8" homepageurl="https://cuiqingwei.github.io" homepagename="CQW的博客"></script>
 </body>
 </html>
